add or fix admin design